# platform_agent

./: .gitignore  README.md  env  mypy.ini  pyproject.toml  ruff.toml  ruff_output.txt
projet/: style.css
src/: main.py
src/application/memory_v2/: episodic_store.py  memory_v2.py  models.py  procedural_store.py  retriever.py  semantic_store.py  working_memory.py
src/application/orchestrators/: agent_runtime.py  conversation_manager.py  evaluator.py  memory_manager.py  planner.py  prompt_manager.py  reflector.py  response_parser.py  scheduler.py  tool_executor.py
src/config/: container.py  environments.py  logging.py  settings.py
src/domain/entities/: agent.py  agent_response.py  memory.py  message.py  permissions.py  plan.py  tool_call.py
src/domain/protocols/: event_bus.py  llm_provider.py  local_event_bus.py  logger.py  memory.py  tool.py
src/infrastructure/llm/: groq_provider.py  openai_provider.py
src/infrastructure/logging/: loguru_logger.py
src/infrastructure/memory/: chroma_memory_store.py  json_memory_store.py
src/infrastructure/tools/: calculator_tool.py  crypto_price_tool.py  datetime_tool.py  default_tools.py  echo_tool.py  file_crud_tool.py  file_list_tool.py  google_search_tool.py  python_code_tool.py  text_stats_tool.py  tool_registry.py  web_fetch_tool.py
tests/: test_agent_robustness.py  test_agent_runtime_tools.py  test_file_tools.py  test_memory.py  test_memory_v2_complet.py  test_memory_v2_diagnostic.py  test_utility_tools.py
